--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,60 @@
 <div class="container">
-  <div class="row">
-    
-    <div id="htmlData">
-      <!-- EMCABEZADO -->
-      <div>
-        <h1 class="text-center display-4" style="font-family: Arial, sans-serif;">Reporte Ejemplo</h1>
+  <div class="">
+    <div class="border my-3">
+
+      <!-- AQUI VA TODO LO QUE SE DESEA MOSTRAR EN EL REPORTE -->
+      <div id="htmlData" class="container">
+        <!-- EMCABEZADO -->
+        
+        <app-header></app-header>
+
+        <!-- CUERPO -->
+
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Activo</label>
+          </div>
+        </form>
+
+        <div class="my-2">
+          <h2>Lista de videojuegos en stock</h2>
+          <table class="table table-bordered mt-4">
+            <tr class="">
+              <th>Id</th>
+              <th>Name</th>
+              <th>Platform</th>
+              <th>Reference</th>
+            </tr>
+            <tr *ngFor="let game of VIDEOGAMES">
+              <th>{{game.id}}</th>
+              <td>{{game.name}}</td>
+              <td>{{game.platform}}</td>
+              <td>{{game.reference}}</td>
+            </tr>
+          </table>
+        </div>
+
+
+        <!-- PIE DE PAGINA -->
+
+        <div id="footer">
+
+        </div>
+
       </div>
-      <h2>Lista de videojuegos en stock</h2>
-      <table class="table table-bordered mt-4">
-        <tr class="">
-          <th>Id</th>
-          <th>Name</th>
-          <th>Platform</th>
-          <th>Reference</th>
-        </tr>
-        <tr *ngFor="let game of VIDEOGAMES">
-          <th>{{game.id}}</th>
-          <td>{{game.name}}</td>
-          <td>{{game.platform}}</td>
-          <td>{{game.reference}}</td>
-        </tr>
-      </table>
     </div>
   </div>
-  
+  <br>
   <div class="row">
     <button class="btn col col-lg-2 btn-danger btn-block ml-4" (click)="descargarPDF()">Descargar PDF</button>
   </div>
 </div>
-
