--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 
         <!-- CUERPO -->
 
+        <app-body></app-body>
         <form>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
