--- a/src/app/layout/body/body.component.html
+++ b/src/app/layout/body/body.component.html
@@ -1,1 +1,63 @@
-<p>body works!</p>
+<form>
+    <div class="row">
+        <div class="form-group col-6">
+            <label for="exampleInputEmail1">Correo electronico</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group col-6">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-8">
+            <label for="exampleInputName">Name</label>
+            <input type="text" class="form-control" id="exampleInputName">
+        </div>
+        <div class="form-group col-4">
+            <label for="exampleInputGender">Genero</label>
+            <select class="form-control" id="exampleInputGender">
+                <option>Masculino</option>
+                <option>Femenino</option>
+                <option>Otro</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-6">
+            <label for="exampleInputAddress">Address</label>
+            <input type="text" class="form-control" id="exampleInputAddress">
+        </div>
+        <div class="form-group col-6">
+            <label for="exampleInputCity">City</label>
+            <input type="text" class="form-control" id="exampleInputCity">
+        </div>
+
+    </div>
+    <div class="form-group">
+        <label for="exampleInputState">State</label>
+        <input type="text" class="form-control" id="exampleInputState">
+    </div>
+    <div class="form-group">
+        <label for="exampleInputZip">Zip Code</label>
+        <input type="text" class="form-control" id="exampleInputZip">
+    </div>
+    <div class="form-group">
+        <label for="exampleInputPhone">Phone Number</label>
+        <input type="text" class="form-control" id="exampleInputPhone">
+    </div>
+    <div class="form-group">
+        <label for="exampleInputDOB">Date of Birth</label>
+        <input type="text" class="form-control" id="exampleInputDOB">
+    </div>
+    
+    <div class="form-group">
+        <label for="exampleInputHobbies">Hobbies</label>
+        <input type="text" class="form-control" id="exampleInputHobbies">
+    </div>
+    <div class="form-group">
+        <label for="exampleInputSkills">Skills</label>
+        <input type="text" class="form-control" id="exampleInputSkills">
+    </div>
+</form>
