--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,16 @@
         <!-- CUERPO -->
 
         <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
+        <app-body></app-body>
         <form>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
